feat: ZGC 설정